// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeInput render with translations 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      SEPARATOR
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      SUBMIT
    </button>
  </form>
</div>
`;

exports[`RawRangeInput onChange expect to update max onChange 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value={490}
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput onChange expect to update min onChange 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value={10}
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render when can't refine 1`] = `
<div
  className="ais-RangeInput ais-RangeInput--noRefinement"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={true}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={true}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with custom className 1`] = `
<div
  className="ais-RangeInput MyCustomRangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with empty values 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with empty values when refinement is equal to min / max 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max={500}
      min={0}
      onChange={[Function]}
      placeholder={0}
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max={500}
      min={0}
      onChange={[Function]}
      placeholder={500}
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with max only 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with min / max 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max={500}
      min={0}
      onChange={[Function]}
      placeholder={0}
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max={500}
      min={0}
      onChange={[Function]}
      placeholder={500}
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with min only 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with precision of 1 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={0.1}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={0.1}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with precision of 2 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={0.01}
      type="number"
      value=""
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={0.01}
      type="number"
      value=""
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`RawRangeInput render with refinement 1`] = `
<div
  className="ais-RangeInput"
>
  <form
    className="ais-RangeInput-form"
    onSubmit={[Function]}
  >
    <input
      className="ais-RangeInput-input ais-RangeInput-input--min"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value={10}
    />
    <span
      className="ais-RangeInput-separator"
    >
      separator
    </span>
    <input
      className="ais-RangeInput-input ais-RangeInput-input--max"
      disabled={false}
      max=""
      min=""
      onChange={[Function]}
      placeholder=""
      step={1}
      type="number"
      value={490}
    />
    <button
      className="ais-RangeInput-submit"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;
